<resources>
    <string name="app_name">Verve Sample Application</string>
    <!-- Button text -->
    <string name="refresh">Refresh</string>
    <string name="load_interstitial">Load Interstitial</string>
    <string name="show_interstitial">Show Interstitial</string>
    <string name="ad_not_ready">Interstitial Not Ready</string>
    <string name="ad_loading">Loading Interstitial…</string>
    <string name="ad_failed">Ad Failed to Load</string>

    <string name="verve">Verve</string>
    <string name="verve_sdk_samples">Verve SDK Samples</string>
    <string name="verve_inline_sample">Verve Inline Ad Sample</string>
    <string name="buttonRefresh">Refresh Banner Ad</string>
    <string name="buttonRefreshRectangle">Refresh Rectangle Ad</string>
    <string name="buttonInterstitialAd">Show Interstitial Ad</string>
    <string name="trackingOn">User Tracking ON</string>
    <string name="trackingOff">User Tracking OFF</string>
    <string name="request_splash_ad">Request Splash Ad</string>

    <string name="splash_manager_sample">Splash Manager Sample</string>
    <string name="start_splash_manager">Start Splash Manager</string>
    <string name="stop_splash_manager">Stop Splash Manager</string>
    <string name="settings_unit">[msec]</string>
    <string name="timeout">Timeout [msec]</string>
    <string name="duration">Duration [msec]</string>
    <string name="interval">Interval [msec]</string>
    <string name="splash_manager_settings">SPLASH MANAGER SETTINGS</string>
    <string name="checkBox_autoRefresh">Auto-Refresh</string>
    <!-- DFP -->
    <string name="dfp">Dfp</string>
    <string name="dfp_banner_sample">Dfp Banner Sample</string>
    <string name="dfp_interstitial_sample">Dfp Interstitial Sample</string>
    <string name="dfp_rectangle_sample">Dfp Rectangle Sample</string>
    <!-- MoPub -->
    <string name="mopub">MoPub</string>
    <string name="mopub_banner_sample">MoPub Banner Sample</string>
    <string name="mopub_interstitial_sample">MoPub Interstitial Sample</string>
    <string name="mopub_rectangle_sample">MoPub Rectangle Sample</string>
    <!-- App Nexus -->
    <string name="appnexus">AppNexus</string>
    <string name="appnexus_banner_sample">AppNexus Banner Sample</string>
    <string name="appnexus_interstitial_sample">AppNexus Interstitial Sample</string>
    <string name="appnexus_rectangle_sample">AppNexus Rectangle Sample</string>

    <!-- Sample text -->
    <string name="sample_text1">Lorem ipsum dolor sit amet, eos ullum similique efficiantur te, postulant partiendo vix ei. Has eu epicurei phaedrum. Vis ex illum meliore, velit invenire ne mel, suas diam iusto an sea. Vel bonorum recusabo definitionem ut, alii case veritus te vel. Vix ridens fabellas nominati ne, ei mei agam facete ceteros, at dolore ridens delicata duo. Hinc persius appetere at qui, ut elitr legere phaedrum mea.</string>
    <string name="sample_text2">His ne quodsi denique volutpat, pri ei soleat accusam appellantur, sea laboramus referrentur ut. Ius regione convenire te. Mei te vulputate appellantur, essent similique constituam ex mei, legere molestie at est. Sit at regione vocibus, nec putent senserit ad. Et noster oporteat appellantur vim, sea at altera nemore corpora, per vocent facilis dolores in.</string>


    <!--Uncomment this if you want to show Permission Explanation dialogs -->
    <!--title is optional -->
    <!--<string name="location_permission_explanation_title">Location explanation title</string>-->
    <!--<string name="location_permission_explanation_message">Location explanation message</string>-->
    <!--<string name="storage_permission_explanation_title">Storage explanation title</string>-->
    <!--<string name="storage_permission_explanation_message">Storage explanation message</string>-->

</resources>
